Fix logo @page-header block. Now is visible (wrong path to file)

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -12,7 +12,7 @@
     margin-left: 20px;
     width: 191px;
     height: 39px;
-    background-image: url("../../img/logo-mobile.svg");
+    background-image: url("../img/logo-mobile.svg");
     background-repeat: no-repeat;
 
     &:hover {
@@ -32,7 +32,7 @@
       left: 0;
       min-height: 306px;
       width: 100%;
-      background-image: url("../../img/index-background-mobile@1x.jpg");
+      background-image: url("../img/index-background-mobile@1x.jpg");
       background-color: #63a73a;
       background-position: bottom;
       background-repeat: no-repeat;
@@ -53,7 +53,7 @@
       margin-left: 29px;
       width: 174px;
       height: 60px;
-      background-image: url("../../img/logo-tablet.svg");
+      background-image: url("../img/logo-tablet.svg");
     }
 
     &--index {
